@@ -1,11 +1,9 @@
 package com.swiftlicious.hellblock.commands.sub;
 
 import java.util.Collections;
-import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
 import java.util.concurrent.CompletableFuture;
-import java.util.stream.Collectors;
 
 import org.bukkit.Bukkit;
 import org.bukkit.command.CommandSender;
@@ -17,15 +15,15 @@ import org.incendo.cloud.context.CommandInput;
 import org.incendo.cloud.parser.standard.StringParser;
 import org.incendo.cloud.suggestion.Suggestion;
 import org.incendo.cloud.suggestion.SuggestionProvider;
+import org.jetbrains.annotations.NotNull;
 
 import com.swiftlicious.hellblock.HellblockPlugin;
 import com.swiftlicious.hellblock.commands.BukkitCommandFeature;
 import com.swiftlicious.hellblock.commands.HellblockCommandManager;
 import com.swiftlicious.hellblock.config.locale.MessageConstants;
+import com.swiftlicious.hellblock.player.HellblockData;
 import com.swiftlicious.hellblock.player.UUIDFetcher;
 import com.swiftlicious.hellblock.player.UserData;
-
-import org.jetbrains.annotations.NotNull;
 
 public class CoopKickCommand extends BukkitCommandFeature<CommandSender> {
 
@@ -42,70 +40,86 @@ public class CoopKickCommand extends BukkitCommandFeature<CommandSender> {
 					public @NotNull CompletableFuture<? extends @NotNull Iterable<? extends @NotNull Suggestion>> suggestionsFuture(
 							@NotNull CommandContext<Object> context, @NotNull CommandInput input) {
 						if (context.sender() instanceof Player player) {
-							List<String> suggestions = HellblockPlugin.getInstance().getStorageManager()
+							return CompletableFuture.completedFuture(HellblockPlugin.getInstance().getStorageManager()
 									.getOnlineUsers().stream()
 									.filter(onlineUser -> onlineUser.isOnline()
 											&& onlineUser.getHellblockData().hasHellblock()
 											&& onlineUser.getHellblockData().getOwnerUUID() != null
 											&& onlineUser.getHellblockData().getOwnerUUID().equals(player.getUniqueId())
 											&& !onlineUser.getName().equalsIgnoreCase(player.getName()))
-									.map(onlineUser -> onlineUser.getName()).collect(Collectors.toList());
-							return CompletableFuture
-									.completedFuture(suggestions.stream().map(Suggestion::suggestion).toList());
+									.map(UserData::getName).map(Suggestion::suggestion).toList());
 						}
 						return CompletableFuture.completedFuture(Collections.emptyList());
 					}
 				})).handler(context -> {
 					final Player player = context.sender();
-					Optional<UserData> onlineUser = HellblockPlugin.getInstance().getStorageManager()
+					final Optional<UserData> senderOpt = HellblockPlugin.getInstance().getStorageManager()
 							.getOnlineUser(player.getUniqueId());
-					if (onlineUser.isEmpty()) {
+
+					if (senderOpt.isEmpty()) {
 						handleFeedback(context, MessageConstants.COMMAND_DATA_FAILURE_NOT_LOADED);
 						return;
 					}
-					if (onlineUser.get().getHellblockData().hasHellblock()) {
-						if (onlineUser.get().getHellblockData().getOwnerUUID() == null) {
-							throw new NullPointerException(
-									"Owner reference returned null, please report this to the developer.");
-						}
-						if (onlineUser.get().getHellblockData().getOwnerUUID() != null
-								&& !onlineUser.get().getHellblockData().getOwnerUUID().equals(player.getUniqueId())) {
-							handleFeedback(context, MessageConstants.MSG_NOT_OWNER_OF_HELLBLOCK);
-							return;
-						}
-						if (onlineUser.get().getHellblockData().isAbandoned()) {
-							handleFeedback(context, MessageConstants.MSG_HELLBLOCK_IS_ABANDONED);
-							return;
-						}
-						String user = context.get("player");
-						if (user.equalsIgnoreCase(player.getName())) {
-							handleFeedback(context, MessageConstants.MSG_HELLBLOCK_NOT_TO_SELF);
-							return;
-						}
-						UUID id = Bukkit.getPlayer(user) != null ? Bukkit.getPlayer(user).getUniqueId()
-								: UUIDFetcher.getUUID(user);
-						if (id == null) {
-							handleFeedback(context, MessageConstants.MSG_HELLBLOCK_PLAYER_OFFLINE);
-							return;
-						}
-						if (!Bukkit.getOfflinePlayer(id).hasPlayedBefore()) {
-							handleFeedback(context, MessageConstants.MSG_HELLBLOCK_PLAYER_OFFLINE);
-							return;
-						}
-						if (id.equals(player.getUniqueId())) {
-							handleFeedback(context, MessageConstants.MSG_HELLBLOCK_NOT_TO_SELF);
-							return;
-						}
-						if (!onlineUser.get().getHellblockData().getParty().contains(id)) {
-							handleFeedback(context, MessageConstants.MSG_HELLBLOCK_COOP_NOT_PART_OF_PARTY);
-							return;
-						}
-						HellblockPlugin.getInstance().getCoopManager().removeMemberFromHellblock(onlineUser.get(), user,
-								id);
-					} else {
+
+					final UserData sender = senderOpt.get();
+					final HellblockData senderData = sender.getHellblockData();
+
+					// Must have a Hellblock
+					if (!senderData.hasHellblock()) {
 						handleFeedback(context, MessageConstants.MSG_HELLBLOCK_NOT_FOUND);
 						return;
 					}
+
+					// Must be the owner
+					final UUID ownerUUID = senderData.getOwnerUUID();
+					if (ownerUUID == null) {
+						HellblockPlugin.getInstance().getPluginLogger()
+								.severe("Hellblock owner UUID was null for player " + player.getName() + " ("
+										+ player.getUniqueId() + "). This indicates corrupted data or a serious bug.");
+						throw new IllegalStateException(
+								"Owner reference was null. This should never happen — please report to the developer.");
+					}
+
+					if (!senderData.isOwner(ownerUUID)) {
+						handleFeedback(context, MessageConstants.MSG_NOT_OWNER_OF_HELLBLOCK);
+						return;
+					}
+
+					if (senderData.isAbandoned()) {
+						handleFeedback(context, MessageConstants.MSG_HELLBLOCK_IS_ABANDONED);
+						return;
+					}
+
+					// Resolve target
+					final String targetName = context.get("player");
+					if (targetName.equalsIgnoreCase(player.getName())) {
+						handleFeedback(context, MessageConstants.MSG_HELLBLOCK_NOT_TO_SELF);
+						return;
+					}
+
+					final UUID targetId = (Bukkit.getPlayer(targetName) != null)
+							? Bukkit.getPlayer(targetName).getUniqueId()
+							: UUIDFetcher.getUUID(targetName);
+
+					if (targetId == null || !Bukkit.getOfflinePlayer(targetId).hasPlayedBefore()) {
+						handleFeedback(context, MessageConstants.MSG_HELLBLOCK_PLAYER_OFFLINE);
+						return;
+					}
+
+					if (targetId.equals(player.getUniqueId())) {
+						handleFeedback(context, MessageConstants.MSG_HELLBLOCK_NOT_TO_SELF);
+						return;
+					}
+
+					// Must be in the party
+					if (!senderData.getParty().contains(targetId)) {
+						handleFeedback(context, MessageConstants.MSG_HELLBLOCK_COOP_NOT_PART_OF_PARTY);
+						return;
+					}
+
+					// Remove from party
+					HellblockPlugin.getInstance().getCoopManager().removeMemberFromHellblock(sender, targetName,
+							targetId);
 				});
 	}
 
