@@ -16,13 +16,13 @@ import net.kyori.adventure.sound.Sound;
 public class AntiAutoFishing {
 
 	public static void prevent(Player player, FishHook hook) {
-		Location loc = hook.getLocation();
+		final Location loc = hook.getLocation();
 		HellblockPlugin.getInstance()
-				.debug(String.format("Trying to prevent player %s from auto fishing.", player.getName()));
+				.debug("Trying to prevent player %s from auto fishing.".formatted(player.getName()));
 		AdventureHelper.playSound(HellblockPlugin.getInstance().getSenderFactory().getAudience(player),
 				Sound.sound(Key.key("minecraft", "entity.fishing_bobber.splash"), Sound.Source.NEUTRAL, 0f, 1f),
 				loc.getX(), loc.getY(), loc.getZ());
-		double motion = -0.4 * RandomUtils.generateRandomDouble(0.6, 1.0);
+		final double motion = -0.4 * RandomUtils.generateRandomDouble(0.6, 1.0);
 		VersionHelper.getNMSManager().sendClientSideEntityMotion(player, new Vector(0, motion, 0), hook.getEntityId());
 		VersionHelper.getNMSManager().sendClientSideEntityMotion(player, new Vector(0, 0, 0), hook.getEntityId());
 	}
