@@ -1,17 +1,14 @@
 package com.swiftlicious.hellblock.protection;
 
-import java.util.Optional;
 import java.util.Set;
 import java.util.UUID;
 import java.util.concurrent.CompletableFuture;
 
-import org.bukkit.Bukkit;
 import org.bukkit.Location;
 import org.bukkit.World;
 import org.bukkit.util.BoundingBox;
 import org.bukkit.util.Vector;
 import org.jetbrains.annotations.NotNull;
-import org.jetbrains.annotations.Nullable;
 
 import com.swiftlicious.hellblock.HellblockPlugin;
 import com.swiftlicious.hellblock.config.locale.MessageConstants;
@@ -22,26 +19,35 @@ import net.kyori.adventure.text.Component;
 
 public class DefaultProtection implements IslandProtection {
 
+	protected final HellblockPlugin instance;
+
+	public DefaultProtection(HellblockPlugin plugin) {
+		instance = plugin;
+	}
+
 	@Override
 	public CompletableFuture<Void> protectHellblock(@NotNull World world, @NotNull UserData owner) {
-		CompletableFuture<Void> protection = new CompletableFuture<>();
+		final CompletableFuture<Void> protection = new CompletableFuture<>();
 		try {
-			HellblockCuboid cuboid = new HellblockCuboid(
-					String.format("%s_%s", owner.getUUID().toString(), owner.getHellblockData().getID()),
-					getProtectionVectorLeft(world, owner.getHellblockData().getHellblockLocation()).toLocation(world),
-					getProtectionVectorRight(world, owner.getHellblockData().getHellblockLocation()).toLocation(world));
+			Location l1 = getProtectionVectorUpperCorner(owner).toLocation(world);
+			Location l2 = getProtectionVectorLowerCorner(owner).toLocation(world);
+
+			double minX = Math.min(l1.getX(), l2.getX());
+			double minY = Math.min(l1.getY(), l2.getY());
+			double minZ = Math.min(l1.getZ(), l2.getZ());
+			double maxX = Math.max(l1.getX(), l2.getX());
+			double maxY = Math.max(l1.getY(), l2.getY());
+			double maxZ = Math.max(l1.getZ(), l2.getZ());
+
 			updateHellblockMessages(world, owner.getUUID());
-			owner.getHellblockData()
-					.setBoundingBox(new BoundingBox((double) cuboid.getLowerX(), (double) cuboid.getLowerY(),
-							(double) cuboid.getLowerZ(), (double) cuboid.getUpperX(), (double) cuboid.getUpperY(),
-							(double) cuboid.getUpperZ()));
-			HellblockPlugin.getInstance().getProtectionManager().getCachedHellblocks().putIfAbsent(owner.getUUID(),
-					cuboid);
-			HellblockPlugin.getInstance().getProtectionManager().changeLockStatus(world, owner.getUUID());
+
+			BoundingBox boundingBox = new BoundingBox(minX, minY, minZ, maxX, maxY, maxZ);
+			owner.getHellblockData().setBoundingBox(boundingBox);
+
+			instance.getProtectionManager().changeLockStatus(world, owner.getUUID());
 			protection.complete(null);
 		} catch (Exception ex) {
-			HellblockPlugin.getInstance().getPluginLogger()
-					.severe(String.format("Unable to protect %s's hellblock!", owner.getName()), ex);
+			instance.getPluginLogger().severe("Unable to protect %s's hellblock!".formatted(owner.getName()), ex);
 			protection.completeExceptionally(ex);
 		}
 		return protection;
@@ -49,26 +55,28 @@ public class DefaultProtection implements IslandProtection {
 
 	@Override
 	public CompletableFuture<Void> unprotectHellblock(@NotNull World world, @NotNull UUID id) {
-		CompletableFuture<Void> unprotection = new CompletableFuture<>();
+		final CompletableFuture<Void> unprotection = new CompletableFuture<>();
 		try {
-			HellblockPlugin.getInstance().getStorageManager()
-					.getOfflineUserData(id, HellblockPlugin.getInstance().getConfigManager().lockData())
-					.thenAccept((result) -> {
-						if (result.isEmpty())
-							return;
-						UserData offlineUser = result.get();
-						HellblockPlugin.getInstance().getProtectionManager().clearHellblockEntities(world,
-								offlineUser.getHellblockData().getBoundingBox());
-						HellblockCuboid cuboid = getHellblock(id);
-						if (cuboid != null) {
-							HellblockPlugin.getInstance().getProtectionManager().getCachedHellblocks().remove(id,
-									cuboid);
+			instance.getStorageManager().getOfflineUserData(id, instance.getConfigManager().lockData())
+					.thenAccept(result -> {
+						try {
+							if (result.isEmpty()) {
+								unprotection.complete(null);
+								return;
+							}
+							final UserData offlineUser = result.get();
+							instance.getProtectionManager().clearHellblockEntities(world,
+									offlineUser.getHellblockData().getBoundingBox());
+
 							unprotection.complete(null);
+						} catch (Exception ex) {
+							instance.getPluginLogger()
+									.severe("Error while unprotecting hellblock for UUID: %s".formatted(id), ex);
+							unprotection.completeExceptionally(ex);
 						}
 					});
 		} catch (Exception ex) {
-			HellblockPlugin.getInstance().getPluginLogger()
-					.severe(String.format("Unable to unprotect %s's hellblock!", Bukkit.getPlayer(id).getName()), ex);
+			instance.getPluginLogger().severe("Unable to unprotect hellblock for UUID: %s".formatted(id), ex);
 			unprotection.completeExceptionally(ex);
 		}
 		return unprotection;
@@ -77,28 +85,27 @@ public class DefaultProtection implements IslandProtection {
 	@Override
 	public CompletableFuture<Void> reprotectHellblock(@NotNull World world, @NotNull UserData owner,
 			@NotNull UserData transferee) {
-		CompletableFuture<Void> reprotection = new CompletableFuture<>();
+		final CompletableFuture<Void> reprotection = new CompletableFuture<>();
 		try {
-			HellblockCuboid cuboid = getHellblock(owner.getUUID());
-			if (cuboid == null)
-				throw new NullPointerException(
-						String.format("Could not get the Hellblock cuboid for the player: %s", owner.getUUID()));
-			HellblockPlugin.getInstance().getProtectionManager().getCachedHellblocks().remove(owner.getUUID(), cuboid);
+			Location l1 = getProtectionVectorUpperCorner(owner).toLocation(world);
+			Location l2 = getProtectionVectorLowerCorner(owner).toLocation(world);
 
-			HellblockCuboid renamedCuboid = new HellblockCuboid(
-					String.format("%s_%s", transferee.getUUID().toString(), transferee.getHellblockData().getID()),
-					getProtectionVectorLeft(world, transferee.getHellblockData().getHellblockLocation())
-							.toLocation(world),
-					getProtectionVectorRight(world, transferee.getHellblockData().getHellblockLocation())
-							.toLocation(world));
-			HellblockPlugin.getInstance().getProtectionManager().getCachedHellblocks().putIfAbsent(transferee.getUUID(),
-					renamedCuboid);
+			double minX = Math.min(l1.getX(), l2.getX());
+			double minY = Math.min(l1.getY(), l2.getY());
+			double minZ = Math.min(l1.getZ(), l2.getZ());
+			double maxX = Math.max(l1.getX(), l2.getX());
+			double maxY = Math.max(l1.getY(), l2.getY());
+			double maxZ = Math.max(l1.getZ(), l2.getZ());
+
+			BoundingBox boundingBox = new BoundingBox(minX, minY, minZ, maxX, maxY, maxZ);
+			transferee.getHellblockData().setBoundingBox(boundingBox);
+
 			updateHellblockMessages(world, transferee.getUUID());
-			HellblockPlugin.getInstance().getProtectionManager().changeLockStatus(world, transferee.getUUID());
+			instance.getProtectionManager().changeLockStatus(world, transferee.getUUID());
 			reprotection.complete(null);
 		} catch (Exception ex) {
-			HellblockPlugin.getInstance().getPluginLogger()
-					.severe(String.format("Unable to reprotect %s's hellblock!", transferee.getPlayer().getName()), ex);
+			instance.getPluginLogger().severe("Unable to reprotect %s's hellblock!".formatted(transferee.getName()),
+					ex);
 			reprotection.completeExceptionally(ex);
 		}
 		return reprotection;
@@ -106,128 +113,60 @@ public class DefaultProtection implements IslandProtection {
 
 	@Override
 	public void updateHellblockMessages(@NotNull World world, @NotNull UUID id) {
-		Optional<UserData> onlineUser = HellblockPlugin.getInstance().getStorageManager().getOnlineUser(id);
-		if (!onlineUser.isEmpty()) {
-			String name = onlineUser.get().getName();
-			if (name == null) {
-				HellblockPlugin.getInstance().getPluginLogger()
-						.warn("Failed to retrieve player's username to update hellblock entry and farewell messages.");
-				return;
-			}
-			HellblockCuboid cuboid = getHellblock(id);
-			if (cuboid == null)
-				throw new NullPointerException(
-						String.format("Could not get the Hellblock cuboid for the player: %s", id));
-			HellblockFlag greetFlag = new HellblockFlag(HellblockFlag.FlagType.GREET_MESSAGE,
-					HellblockPlugin.getInstance().getConfigManager().entryMessageEnabled()
-							? HellblockFlag.AccessType.ALLOW
-							: HellblockFlag.AccessType.DENY);
-			if (HellblockPlugin.getInstance().getConfigManager().entryMessageEnabled()) {
-				if (!onlineUser.get().getHellblockData().isAbandoned()) {
-					greetFlag.getFlag()
-							.setData(HellblockPlugin.getInstance().getTranslationManager().miniMessageTranslation(
-									AdventureHelper.legacyToMiniMessage(MessageConstants.HELLBLOCK_ENTRY_MESSAGE
-											.arguments(Component.text(name)).build().key())));
-				} else {
-					greetFlag.getFlag()
-							.setData(HellblockPlugin.getInstance().getTranslationManager()
-									.miniMessageTranslation(AdventureHelper.legacyToMiniMessage(
-											MessageConstants.HELLBLOCK_ABANDONED_ENTRY_MESSAGE.build().key())));
-				}
-			} else {
-				greetFlag.getFlag().setData(null);
-			}
-			HellblockFlag farewellFlag = new HellblockFlag(HellblockFlag.FlagType.FAREWELL_MESSAGE,
-					HellblockPlugin.getInstance().getConfigManager().farewellMessageEnabled()
-							? HellblockFlag.AccessType.ALLOW
-							: HellblockFlag.AccessType.DENY);
-			if (HellblockPlugin.getInstance().getConfigManager().farewellMessageEnabled()) {
-				if (!onlineUser.get().getHellblockData().isAbandoned()) {
-					farewellFlag.getFlag()
-							.setData(HellblockPlugin.getInstance().getTranslationManager().miniMessageTranslation(
-									AdventureHelper.legacyToMiniMessage(MessageConstants.HELLBLOCK_FAREWELL_MESSAGE
-											.arguments(Component.text(name)).build().key())));
-				} else {
-					farewellFlag.getFlag()
-							.setData(HellblockPlugin.getInstance().getTranslationManager()
-									.miniMessageTranslation(AdventureHelper.legacyToMiniMessage(
-											MessageConstants.HELLBLOCK_ABANDONED_FAREWELL_MESSAGE.build().key())));
-				}
-			} else {
-				farewellFlag.getFlag().setData(null);
-			}
-		} else {
-			HellblockPlugin.getInstance().getStorageManager()
-					.getOfflineUserData(id, HellblockPlugin.getInstance().getConfigManager().lockData())
-					.thenAccept((result) -> {
-						if (result.isEmpty())
-							return;
-						UserData offlineUser = result.get();
-						String name = offlineUser.getName();
-						if (name == null) {
-							HellblockPlugin.getInstance().getPluginLogger().warn(
-									"Failed to retrieve player's username to update hellblock entry and farewell messages.");
+		instance.getStorageManager().getOfflineUserData(id, instance.getConfigManager().lockData())
+				.thenAccept(result -> {
+					try {
+						final UserData user = result.orElse(null);
+
+						if (user == null) {
+							instance.getPluginLogger().warn(
+									"Failed to retrieve player's username to update hellblock entry/farewell messages.");
 							return;
 						}
-						HellblockCuboid cuboid = getHellblock(id);
-						if (cuboid == null)
-							throw new NullPointerException(
-									String.format("Could not get the Hellblock cuboid for the player: %s", id));
-						HellblockFlag greetFlag = new HellblockFlag(HellblockFlag.FlagType.GREET_MESSAGE,
-								HellblockPlugin.getInstance().getConfigManager().entryMessageEnabled()
-										? HellblockFlag.AccessType.ALLOW
-										: HellblockFlag.AccessType.DENY);
-						if (HellblockPlugin.getInstance().getConfigManager().entryMessageEnabled()) {
-							if (!offlineUser.getHellblockData().isAbandoned()) {
-								greetFlag.getFlag()
-										.setData(HellblockPlugin.getInstance().getTranslationManager()
-												.miniMessageTranslation(AdventureHelper
-														.legacyToMiniMessage(MessageConstants.HELLBLOCK_ENTRY_MESSAGE
-																.arguments(Component.text(name)).build().key())));
-							} else {
-								greetFlag.getFlag().setData(HellblockPlugin.getInstance().getTranslationManager()
-										.miniMessageTranslation(AdventureHelper.legacyToMiniMessage(
-												MessageConstants.HELLBLOCK_ABANDONED_ENTRY_MESSAGE.build().key())));
-							}
-						} else {
-							greetFlag.getFlag().setData(null);
-						}
-						HellblockFlag farewellFlag = new HellblockFlag(HellblockFlag.FlagType.FAREWELL_MESSAGE,
-								HellblockPlugin.getInstance().getConfigManager().farewellMessageEnabled()
-										? HellblockFlag.AccessType.ALLOW
-										: HellblockFlag.AccessType.DENY);
-						if (HellblockPlugin.getInstance().getConfigManager().farewellMessageEnabled()) {
-							if (!offlineUser.getHellblockData().isAbandoned()) {
-								farewellFlag.getFlag()
-										.setData(HellblockPlugin.getInstance().getTranslationManager()
-												.miniMessageTranslation(AdventureHelper
-														.legacyToMiniMessage(MessageConstants.HELLBLOCK_FAREWELL_MESSAGE
-																.arguments(Component.text(name)).build().key())));
-							} else {
-								farewellFlag.getFlag().setData(HellblockPlugin.getInstance().getTranslationManager()
-										.miniMessageTranslation(AdventureHelper.legacyToMiniMessage(
-												MessageConstants.HELLBLOCK_ABANDONED_FAREWELL_MESSAGE.build().key())));
-							}
-						} else {
-							farewellFlag.getFlag().setData(null);
-						}
-					});
-		}
+
+						updateMessagesForUser(user, id, user.getName());
+					} catch (Exception ex) {
+						instance.getPluginLogger()
+								.severe("Error updating hellblock messages for UUID: %s".formatted(id), ex);
+					}
+				});
+	}
+
+	private void updateMessagesForUser(UserData user, UUID id, String name) {
+		final boolean abandoned = user.getHellblockData().isAbandoned();
+
+		// Greeting flag
+		createAndSetMessageFlag(HellblockFlag.FlagType.GREET_MESSAGE, instance.getConfigManager().entryMessageEnabled(),
+				abandoned ? MessageConstants.HELLBLOCK_ABANDONED_ENTRY_MESSAGE.build().key()
+						: MessageConstants.HELLBLOCK_ENTRY_MESSAGE.arguments(Component.text(name)).build().key());
+
+		// Farewell flag
+		createAndSetMessageFlag(HellblockFlag.FlagType.FAREWELL_MESSAGE,
+				instance.getConfigManager().farewellMessageEnabled(),
+				abandoned ? MessageConstants.HELLBLOCK_ABANDONED_FAREWELL_MESSAGE.build().key()
+						: MessageConstants.HELLBLOCK_FAREWELL_MESSAGE.arguments(Component.text(name)).build().key());
+	}
+
+	private void createAndSetMessageFlag(HellblockFlag.FlagType type, boolean enabled, String messageKey) {
+		final HellblockFlag flag = new HellblockFlag(type,
+				enabled ? HellblockFlag.AccessType.ALLOW : HellblockFlag.AccessType.DENY);
+		flag.getFlag().setData(enabled ? instance.getTranslationManager()
+				.miniMessageTranslation(AdventureHelper.legacyToMiniMessage(messageKey)) : null);
 	}
 
 	@Override
 	public void abandonIsland(@NotNull World world, @NotNull UUID id) {
-		HellblockPlugin.getInstance().getStorageManager()
-				.getOfflineUserData(id, HellblockPlugin.getInstance().getConfigManager().lockData())
-				.thenAccept((result) -> {
-					if (result.isEmpty())
+		instance.getStorageManager().getOfflineUserData(id, instance.getConfigManager().lockData())
+				.thenAccept(result -> {
+					if (result.isEmpty()) {
 						return;
-					UserData offlineUser = result.get();
+					}
+					final UserData offlineUser = result.get();
 					if (offlineUser.getHellblockData().isAbandoned()) {
 						offlineUser.getHellblockData().setProtectionValue(
-								new HellblockFlag(HellblockFlag.FlagType.PVP, HellblockFlag.AccessType.DENY));
+								new HellblockFlag(HellblockFlag.FlagType.PVP, HellblockFlag.AccessType.ALLOW));
 						offlineUser.getHellblockData().setProtectionValue(
-								new HellblockFlag(HellblockFlag.FlagType.BUILD, HellblockFlag.AccessType.DENY));
+								new HellblockFlag(HellblockFlag.FlagType.BUILD, HellblockFlag.AccessType.ALLOW));
 						offlineUser.getHellblockData().setProtectionValue(
 								new HellblockFlag(HellblockFlag.FlagType.ENTRY, HellblockFlag.AccessType.DENY));
 						offlineUser.getHellblockData().setProtectionValue(
@@ -237,37 +176,53 @@ public class DefaultProtection implements IslandProtection {
 	}
 
 	@Override
-	public CompletableFuture<Set<UUID>> getMembersOfHellblockBounds(@NotNull World world, @NotNull UUID ownerID) {
-		CompletableFuture<Set<UUID>> members = new CompletableFuture<>();
-		HellblockPlugin.getInstance().getStorageManager()
-				.getOfflineUserData(ownerID, HellblockPlugin.getInstance().getConfigManager().lockData())
-				.thenAccept((result) -> {
-					if (result.isEmpty())
+	public void restoreFlags(@NotNull World world, @NotNull UUID id) {
+		instance.getStorageManager().getOfflineUserData(id, instance.getConfigManager().lockData())
+				.thenAccept(result -> {
+					if (result.isEmpty()) {
 						return;
-					UserData offlineUser = result.get();
-					members.complete(offlineUser.getHellblockData().getIslandMembers());
+					}
+					final UserData offlineUser = result.get();
+					if (!offlineUser.getHellblockData().isAbandoned()) {
+						offlineUser.getHellblockData().setProtectionValue(
+								new HellblockFlag(HellblockFlag.FlagType.PVP, HellblockFlag.AccessType.DENY));
+						offlineUser.getHellblockData().setProtectionValue(
+								new HellblockFlag(HellblockFlag.FlagType.BUILD, HellblockFlag.AccessType.DENY));
+						offlineUser.getHellblockData().setProtectionValue(
+								new HellblockFlag(HellblockFlag.FlagType.ENTRY, HellblockFlag.AccessType.ALLOW));
+						offlineUser.getHellblockData().setProtectionValue(
+								new HellblockFlag(HellblockFlag.FlagType.MOB_SPAWNING, HellblockFlag.AccessType.ALLOW));
+					}
+				});
+	}
+
+	@Override
+	public CompletableFuture<Set<UUID>> getMembersOfHellblockBounds(@NotNull World world, @NotNull UUID ownerID) {
+		final CompletableFuture<Set<UUID>> members = new CompletableFuture<>();
+		instance.getStorageManager().getOfflineUserData(ownerID, instance.getConfigManager().lockData())
+				.thenAccept(result -> {
+					if (result.isEmpty()) {
+						members.complete(Set.of());
+						return;
+					}
+					members.complete(result.get().getHellblockData().getIslandMembers());
 				});
 		return members;
 	}
 
-	private @NotNull Vector getProtectionVectorLeft(@NotNull World world, @NotNull Location loc) {
-		return new Vector(
-				loc.getX() + (double) (HellblockPlugin.getInstance().getConfigManager().protectionRange() / 2),
-				world.getMaxHeight(),
-				loc.getZ() + (double) (HellblockPlugin.getInstance().getConfigManager().protectionRange() / 2));
+	public @NotNull Vector getProtectionVectorUpperCorner(@NotNull UserData owner) {
+		final BoundingBox bounds = owner.getHellblockData().getBoundingBox();
+		if (bounds == null) {
+			throw new IllegalStateException("Bounding box not set. Did you call expandBoundingBox()?");
+		}
+		return new Vector(bounds.getMaxX(), bounds.getMaxY(), bounds.getMaxZ());
 	}
 
-	private @NotNull Vector getProtectionVectorRight(@NotNull World world, @NotNull Location loc) {
-		return new Vector(
-				loc.getX() - (double) (HellblockPlugin.getInstance().getConfigManager().protectionRange() / 2),
-				world.getMinHeight(),
-				loc.getZ() - (double) (HellblockPlugin.getInstance().getConfigManager().protectionRange() / 2));
-	}
-
-	private @Nullable HellblockCuboid getHellblock(@NotNull UUID playerUUID) {
-		if (!HellblockPlugin.getInstance().getProtectionManager().getCachedHellblocks().containsKey(playerUUID))
-			return null;
-
-		return HellblockPlugin.getInstance().getProtectionManager().getCachedHellblocks().get(playerUUID);
+	public @NotNull Vector getProtectionVectorLowerCorner(@NotNull UserData owner) {
+		final BoundingBox bounds = owner.getHellblockData().getBoundingBox();
+		if (bounds == null) {
+			throw new IllegalStateException("Bounding box not set. Did you call expandBoundingBox()?");
+		}
+		return new Vector(bounds.getMinX(), bounds.getMinY(), bounds.getMinZ());
 	}
 }
